overflow fixed

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ textarea {
     margin-left: 29%;
     padding: 10px;
     border: .5px solid black;
+    overflow: auto;
 }
 .head {
     display: block;
